<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="viewModel" type="asia.groovelab.blesample.viewmodel.PeripheralViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CentralPeripheralActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:minHeight="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@android:color/white"
            android:background="?attr/colorPrimary"
            app:title="@string/peripheral_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/advertise_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:onClick="@{viewModel::onClickAdvertiseButton}"
            android:text="@{viewModel.advertiseButtonTitle}"
            android:enabled="@{viewModel.isAdvertiseButtonEnabled}"
            android:textAllCaps="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <TextView
            android:id="@+id/service_uuid_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            app:layout_constraintTop_toBottomOf="@id/advertise_button"
            app:layout_constraintLeft_toLeftOf="parent"
            android:visibility="@{viewModel.serviceUuidVisibility}"
            android:text="@string/service_uuid_title" />

        <TextView
            android:id="@+id/service_uuid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/service_uuid_title"
            app:layout_constraintLeft_toLeftOf="@id/service_uuid_title"
            android:visibility="@{viewModel.serviceUuidVisibility}"
            android:text="@{viewModel.serviceUuid}"
            tools:text="1234-1234-1234"/>

        <TextView
            android:id="@+id/characteristic_uuid_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/service_uuid"
            app:layout_constraintLeft_toLeftOf="@id/service_uuid"
            android:visibility="@{viewModel.serviceUuidVisibility}"
            android:text="@string/characteristic_uuid_title" />

        <TextView
            android:id="@+id/characteristic_read_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/characteristic_uuid_title"
            app:layout_constraintLeft_toLeftOf="@id/characteristic_uuid_title"
            android:visibility="@{viewModel.serviceUuidVisibility}"
            android:text="@string/characteristic_read" />

        <TextView
            android:id="@+id/characteristic_read_uuid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/characteristic_read_title"
            app:layout_constraintLeft_toLeftOf="@id/characteristic_read_title"
            android:visibility="@{viewModel.serviceUuidVisibility}"
            android:text="@{viewModel.characteristicReadUuid}"
            tools:text="1234-1234-1234"/>

        <TextView
            android:id="@+id/characteristic_write_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/characteristic_read_uuid"
            app:layout_constraintLeft_toLeftOf="@id/characteristic_read_uuid"
            android:visibility="@{viewModel.serviceUuidVisibility}"
            android:text="@string/characteristic_write" />

        <TextView
            android:id="@+id/characteristic_write_uuid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/characteristic_write_title"
            app:layout_constraintLeft_toLeftOf="@id/characteristic_write_title"
            android:visibility="@{viewModel.serviceUuidVisibility}"
            android:text="@{viewModel.characteristicWriteUuid}"
            tools:text="1234-1234-1234"/>

        <TextView
            android:id="@+id/characteristic_notify_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/characteristic_write_uuid"
            app:layout_constraintLeft_toLeftOf="@id/characteristic_write_uuid"
            android:visibility="@{viewModel.serviceUuidVisibility}"
            android:text="@string/characteristic_notify" />

        <TextView
            android:id="@+id/characteristic_notify_uuid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/characteristic_notify_title"
            app:layout_constraintLeft_toLeftOf="@id/characteristic_notify_title"
            android:visibility="@{viewModel.serviceUuidVisibility}"
            android:text="@{viewModel.characteristicNotifyUuid}"
            tools:text="1234-1234-1234"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>